correct first adc video playback + remove TODO
- load jquery sooner
- remove video1 as doesn't look great

--- a/code/css/stylesheet.css
+++ b/code/css/stylesheet.css
@@ -485,9 +485,6 @@ a.clickable:hover {
     background-image: url("../../links/images/adaptventures/SamLloyd_AdaptVentures_Video1b.jpg");
 }
 #thumbnail-ADC1 {
-    background-image: url("../../links/images/adc/SamLloyd_ADC_Video1.jpg");
-}
-#thumbnail-ADC2 {
     background-image: url("../../links/images/adc/SamLloyd_ADC_Video2.jpg");
 }
 #thumbnail-BN1 {
